Fix : remove unnecessary data to avoid conflict

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 # Authorization using JWT #
 ACCESS_TOKEN_SECRET_KEY = ""
 RSA_PRIVATE_PEM_STRING = ""
-AUTH_CLIENTS=[["5507cc3a-fd29-11ec-b939-0242ac120002", null, [], "AppAuthClient"],["Titan", null,["https://myecl.fr/static.html"], "AppAuthClient"]]
+AUTH_CLIENTS=[]
 
 # Host or url of the instance of Hyperion
 # This url will be especially used for oidc/oauth2 discovery endpoint and links send by email
@@ -22,7 +22,7 @@ LOG_DEBUG_MESSAGES=true
 
 # CORS_ORIGINS should be a list of urls allowed to make requests to the API
 # It should begin with 'http://' or 'https:// and should never end with a '/'
-CORS_ORIGINS=["*"]
+CORS_ORIGINS=["http://localhost"]
 
 # Matrix configuration #
 #MATRIX_SERVER_BASE_URL = ""
@@ -73,14 +73,14 @@ MYECLPAY_MAXIMUM_WALLET_BALANCE: int | None
 #S3_SECRET_ACCESS_KEY = "realsecretkey"
 
 # Redis configuration #
-REDIS_HOST = "" #May be left at "" during dev if you don't have a redis server running, in production it should be set to the name of the redis container
+REDIS_HOST = "hyperion-redis" #May be left at "" during dev if you don't have a redis server running, in production it should be set to the name of the redis container
 REDIS_PORT = 6379
 REDIS_PASSWORD = "" #Should be commented during development to work with docker-compose-dev, and set in production
 REDIS_LIMIT = 1000
 REDIS_WINDOW = 60
 
 # PostgreSQL configuration #
-SQLITE_DB = "sql_app.db" # If set, the application use a SQLite database instead of PostgreSQL, for testing or development purposes (should not be used if possible)
+SQLITE_DB = "" # If set, the application use a SQLite database instead of PostgreSQL, for testing or development purposes (should not be used if possible)
 POSTGRES_HOST = "hyperion-db" #Should be set to the name of the postgres container
 POSTGRES_USER = ""
 POSTGRES_PASSWORD = ""
