Fix: correct sellers cruds and models

--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@
 ACCESS_TOKEN_SECRET_KEY = ""
 RSA_PRIVATE_PEM_STRING = ""
 AUTH_CLIENTS=[]
-
+MYECLPAY_DATA_VERIFIER_ACCESS_TOKEN = ""
 # Host or url of the instance of Hyperion
 # This url will be especially used for oidc/oauth2 discovery endpoint and links send by email
 # NOTE: A trailing / is required
@@ -57,7 +57,9 @@ USE_FIREBASE=false
 #HELLOASSO_CLIENT_ID = ""
 #HELLOASSO_CLIENT_SECRET = ""
 
-CDR_PAYMENT_REDIRECTION_URL: str | None = None
+CDR_PAYMENT_REDIRECTION_URL: str | None
+MYECLPAY_PAYMENT_REDIRECTION_URL: str | None
+MYECLPAY_MAXIMUM_WALLET_BALANCE: int | None
 
 # Redis configuration #
 REDIS_HOST = "hyperion-redis" #May be left at "" during dev if you don't have a redis server running, in production it should be set to the name of the redis container
