--- a/.env.template
+++ b/.env.template
@@ -56,9 +56,13 @@ USE_FIREBASE=false
 #HELLOASSO_API_BASE = ""
 #HELLOASSO_CLIENT_ID = ""
 #HELLOASSO_CLIENT_SECRET = ""
+# Main slug of the HelloAsso account
+#HELLOASSO_SLUG = ""
+#HELLOASSO_MYECLPAY_SLUG = ""
+
+TRUSTED_PAYMENT_REDIRECT_URLS = []
 
 CDR_PAYMENT_REDIRECTION_URL: str | None
-MYECLPAY_PAYMENT_REDIRECTION_URL: str | None
 MYECLPAY_MAXIMUM_WALLET_BALANCE: int | None
 
 # Redis configuration #
