--- a/.env.test
+++ b/.env.test
@@ -2,7 +2,7 @@
 #   This dotenv file and its values should NEVER be used in PRODUCTION!   #
 ###########################################################################
 
-# SQLITE_DB = "test.db" # If set, the application use a SQLite database instead of PostgreSQL, for testing or development purposes (should not be used if possible)
+SQLITE_DB = "test.db" # If set, the application use a SQLite database instead of PostgreSQL, for testing or development purposes (should not be used if possible)
 
 # Authorization using JWT #
 ACCESS_TOKEN_SECRET_KEY="YWZOHliiI53lJMJc5BI_WbGbA4GF2T7Wbt1airIhOXEa3c021c4-1c55-4182-b141-7778bcc8fac4" # Note: modifing this token requires to update the common `test_check_settings_mocking` test
@@ -27,6 +27,13 @@ CORS_ORIGINS=["https://test-authorized-origin.com"]
 # Token to use the TMDB API
 #THE_MOVIE_DB_API = ""
 
+TRUSTED_PAYMENT_REDIRECT_URLS = ["http://localhost:3000/payment_callback"]
+
+HELLOASSO_SLUG = ""
+HELLOASSO_MYECLPAY_SLUG = ""
+
+MYECLPAY_MAXIMUM_WALLET_BALANCE = 5000
+
 # SMTP configuration using starttls #
 SMTP_ACTIVE = False
 SMTP_PORT = 587
@@ -39,7 +46,7 @@ SMTP_EMAIL = ""
 USE_FIREBASE=false
 
 # Redis configuration #
-REDIS_HOST = "localhost"
+REDIS_HOST = ""
 REDIS_PORT = 6379
 #REDIS_PASSWORD = ""
 REDIS_LIMIT = 5
