Rename Factories .env variable

--- a/.env.template
+++ b/.env.template
@@ -87,7 +87,7 @@ POSTGRES_PASSWORD = ""
 POSTGRES_DB = ""
 POSTGRES_TZ = "Etc/UTC"
 DATABASE_DEBUG = False #If True, will print all SQL queries in the console
-FACTORIES = True #If True, will use factories to populate the database with fake data
+USE_FACTORIES = True #If True, will use factories to populate the database with fake data
 
 # Drive configuration for the raid registering app
 RAID_DRIVE_REFRESH_TOKEN: str | None = None
