--- a/.github/workflows/publishbase.yml
+++ b/.github/workflows/publishbase.yml
@@ -1,9 +1,12 @@
-name: Build and Publish Hyperion Docker Images
+name: Build and Publish Hyperion Base Docker Images
 on:
   workflow_dispatch:
   push:
-    tags:
-      - 'v*.*.*'
+    paths:
+      - 'Dockerfile.base'
+      - 'requirements-common.txt'
+      - 'requirements-prod.txt'
+
 
 jobs:
   docker:
@@ -14,14 +17,18 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v4
 
+      - name: Calculate requirements md5
+        id: md5
+        run: |
+          echo "REQUIREMENTS_MD5=$(cat requirements-common.txt requirements-prod.txt | md5sum | cut -d ' ' -f 1)" >> $GITHUB_ENV
+
       - name: Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKER_REGISTRY_IDENTIFER }}/hyperion
+          images: ${{ secrets.DOCKER_REGISTRY_IDENTIFER }}/hyperion-base
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            ${{ env.REQUIREMENTS_MD5 }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -33,20 +40,11 @@ jobs:
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
-      - name: Calculate requirements md5
-        id: md5
-        run: |
-            echo "REQUIREMENTS_MD5=$(cat requirements-common.txt requirements-prod.txt | md5sum | cut -d ' ' -f 1)" >> $GITHUB_ENV
-      
-      - name: Complete Dockerfile
-        run: |
-            sed 's|{{DOCKER_REGISTRY_IDENTIFER}}|${{ secrets.DOCKER_REGISTRY_IDENTIFER }}|g' -i Dockerfile.base
-            sed 's|{{REQUIREMENTS_MD5}}|${{ env.REQUIREMENTS_MD5 }}|g' -i Dockerfile.base
-          
       - name: Build and push app
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: ./Dockerfile.base
           platforms: linux/amd64 #,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
