--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,6 +13,7 @@ ruff==0.11.8
 types-aiofiles==24.1.0.20250516
 types-Authlib==1.5.0.20250516
 types-fpdf2==2.8.3.20250516
+types-psutil==7.0.0.20250401
 types-redis==4.6.0.20241004
 types-requests==2.32.0.20250515
 boto3-stubs[essential]==1.38.23
