--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@
 ACCESS_TOKEN_SECRET_KEY = ""
 RSA_PRIVATE_PEM_STRING = ""
 AUTH_CLIENTS=[]
-MYECLPAY_DATA_VERIFIER_ACCESS_TOKEN = ""
+
 # Host or url of the instance of Hyperion
 # This url will be especially used for oidc/oauth2 discovery endpoint and links send by email
 # NOTE: A trailing / is required
@@ -60,6 +60,7 @@ USE_FIREBASE=false
 #HELLOASSO_SLUG = ""
 #HELLOASSO_MYECLPAY_SLUG = ""
 
+#MYECLPAY_DATA_VERIFIER_ACCESS_TOKEN = ""
 TRUSTED_PAYMENT_REDIRECT_URLS = []
 
 CDR_PAYMENT_REDIRECTION_URL: str | None
