Reenable localhost redis for tests

--- a/.env.test
+++ b/.env.test
@@ -46,7 +46,7 @@ SMTP_EMAIL = ""
 USE_FIREBASE=false
 
 # Redis configuration #
-REDIS_HOST = ""
+REDIS_HOST = "localhost"
 REDIS_PORT = 6379
 #REDIS_PASSWORD = ""
 REDIS_LIMIT = 5
