Feat: add locker utils

--- a/.env.template
+++ b/.env.template
@@ -88,7 +88,7 @@ POSTGRES_DB = ""
 POSTGRES_TZ = "Etc/UTC"
 DATABASE_DEBUG = False #If True, will print all SQL queries in the console
 USE_FACTORIES = True #If True, will use factories to populate the database with fake data
-FACTORIES_DEMO_USERS_PASSWORD = "password" #Password used to create demo users
+FACTORIES_DEMO_USERS_PASSWORD =  #Password used to create demo users
 
 # Drive configuration for the raid registering app
 RAID_DRIVE_REFRESH_TOKEN: str | None = None
