--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,9 @@ indent-width = 4
 target-version = "py311"
 
 [tool.ruff.lint]
-# Enable Pyflakes (`F`), pycodestyle (`E`, `W`), isort (`I`), pep8-naming (`N`), flake8-bugbear (`B`)
-# T201: check for prints, C90: mccabe complexity
 select = [
     "FAST",
     "YTT",
-    "F",
-    "E",
-    "W",
-    "C90",
-    "I",
-    "UP",
     "ASYNC",
     "S",
     "B",
@@ -25,8 +17,11 @@ select = [
     "C4",
     "DTZ",
     "FA",
+    "INT",
     "ISC",
     "ICN",
+    "LOG",
+    "G",
     "INP",
     "PIE",
     "T20",
@@ -34,17 +29,25 @@ select = [
     "PT",
     "Q",
     "SLF",
-    "SLOT",
     "SIM",
-    "TCH",
+    "SLOT",
+    "TID",
+    "TC",
     "PTH",
-    "PL",
-    "TRY",
     "FLY",
+    "I",
+    "C90",
     "PERF",
+    "E",
+    "W",
+    "F",
+    "PL",
+    "UP",
     "FURB",
     "RUF",
-] # "B", "N" to add later
+    "TRY",
+    "TCH",
+]
 # We may want to enable "ERA" to found commented-out code
 ignore = [
     "FAST002", # We don't use annotated dependencies
@@ -64,6 +67,7 @@ ignore = [
     "PLR0913", # "Too many arguments in function definition"
     "PLR0915", # "Too many statements"
     "PLR2004", # "Magic value used in comparison"
+    "G004",    # "Logging statement uses f-string"
 ]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
