--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ select = [
     "E",
     "W",
     "F",
+    "PGH",
     "PL",
     "UP",
     "FURB",
@@ -138,6 +139,7 @@ module = [
     "fitz",
     "google_auth_oauthlib.flow",
     "googleapiclient.*",
+    "sqlalchemy_utils",
 ]
 ignore_missing_imports = true
 
