--- a/pyproject.toml
+++ b/pyproject.toml
@@ -169,6 +169,8 @@ ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "module"
+asyncio_default_test_loop_scope = "module"
 filterwarnings = [
     "error",
     # We don't know how to fix the warning:
