--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -4,6 +4,7 @@ arq==0.26.1                         # Scheduler
 asyncpg==0.29.0                     # PostgreSQL adapter for asynchronous operations
 authlib==1.5.2
 bcrypt==4.1.3                       # password hashing
+boto3==1.38.7
 broadcaster==0.3.1                  # Working with websockets with multiple workers.
 calypsso==1.3.0
 fastapi[standard]==0.115.6
