--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -15,4 +15,5 @@ types-Authlib==1.5.0.20250416
 types-fpdf2==2.7.9.20240519
 types-redis==4.6.0.20240425
 types-requests==2.32.0.20240622
+boto3-stubs[s3]==1.38.7
 google-auth-stubs==0.3.0
