--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,4 +14,5 @@ types-aiofiles==24.1.0.20240626
 types-fpdf2==2.7.9.20240519
 types-redis==4.6.0.20240425
 types-requests==2.32.0.20240622
+boto3-stubs[s3]==1.38.7
 google-auth-stubs==0.3.0
