--- a/.env.template
+++ b/.env.template
@@ -56,8 +56,15 @@ USE_FIREBASE=false
 #HELLOASSO_API_BASE = ""
 #HELLOASSO_CLIENT_ID = ""
 #HELLOASSO_CLIENT_SECRET = ""
+# Main slug of the HelloAsso account
+#HELLOASSO_SLUG = ""
+#HELLOASSO_MYECLPAY_SLUG = ""
 
-CDR_PAYMENT_REDIRECTION_URL: str | None = None
+TRUSTED_PAYMENT_REDIRECT_URLS = []
+
+CDR_PAYMENT_REDIRECTION_URL: str | None
+MYECLPAY_MAXIMUM_WALLET_BALANCE: int | None
+#MYECLPAY_DATA_VERIFIER_ACCESS_TOKEN = ""
 
 # Redis configuration #
 REDIS_HOST = "hyperion-redis" #May be left at "" during dev if you don't have a redis server running, in production it should be set to the name of the redis container
