--- a/.env.test
+++ b/.env.test
@@ -27,6 +27,13 @@ CORS_ORIGINS=["https://test-authorized-origin.com"]
 # Token to use the TMDB API
 #THE_MOVIE_DB_API = ""
 
+TRUSTED_PAYMENT_REDIRECT_URLS = ["http://localhost:3000/payment_callback"]
+
+HELLOASSO_SLUG = ""
+HELLOASSO_MYECLPAY_SLUG = ""
+
+MYECLPAY_MAXIMUM_WALLET_BALANCE = 5000
+
 # SMTP configuration using starttls #
 SMTP_ACTIVE = False
 SMTP_PORT = 587
