--- a/.env.template
+++ b/.env.template
@@ -67,9 +67,9 @@ MYECLPAY_MAXIMUM_WALLET_BALANCE: int | None
 #MYECLPAY_DATA_VERIFIER_ACCESS_TOKEN = ""
 
 # S3 configuration for file storage
-S3_BUCKET_NAME = "hyperion"
-S3_ACCESS_KEY_ID = "realaccesskey"
-S3_SECRET_ACCESS_KEY = "realsecretkey"
+#S3_BUCKET_NAME = "hyperion"
+#S3_ACCESS_KEY_ID = "realaccesskey"
+#S3_SECRET_ACCESS_KEY = "realsecretkey"
 
 # Redis configuration #
 REDIS_HOST = "hyperion-redis" #May be left at "" during dev if you don't have a redis server running, in production it should be set to the name of the redis container
