--- a/.env.template
+++ b/.env.template
@@ -66,6 +66,11 @@ CDR_PAYMENT_REDIRECTION_URL: str | None
 MYECLPAY_MAXIMUM_WALLET_BALANCE: int | None
 #MYECLPAY_DATA_VERIFIER_ACCESS_TOKEN = ""
 
+# S3 configuration for file storage
+#S3_MYECLPAY_LOGS_BUCKET_NAME = "hyperion"
+#S3_ACCESS_KEY_ID = "realaccesskey"
+#S3_SECRET_ACCESS_KEY = "realsecretkey"
+
 # Redis configuration #
 REDIS_HOST = "hyperion-redis" #May be left at "" during dev if you don't have a redis server running, in production it should be set to the name of the redis container
 REDIS_PORT = 6379
