--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,9 @@ indent-width = 4
 target-version = "py311"
 
 [tool.ruff.lint]
-# Enable Pyflakes (`F`), pycodestyle (`E`, `W`), isort (`I`), pep8-naming (`N`), flake8-bugbear (`B`)
-# T201: check for prints, C90: mccabe complexity
 select = [
-    "F",
-    "E",
-    "W",
-    "C90",
-    "I",
-    "UP",
+    "FAST",
+    "YTT",
     "ASYNC",
     "S",
     "B",
@@ -23,28 +17,42 @@ select = [
     "C4",
     "DTZ",
     "FA",
+    "INT",
     "ISC",
     "ICN",
+    "LOG",
+    "G",
     "INP",
     "PIE",
     "T20",
     "PYI",
     "PT",
+    "RET",
     "Q",
     "SLF",
-    "SLOT",
     "SIM",
-    "TCH",
+    "SLOT",
+    "TID",
+    "TC",
     "PTH",
-    "PL",
-    "TRY",
     "FLY",
+    "I",
+    "C90",
     "PERF",
+    "E",
+    "W",
+    "F",
+    "PGH",
+    "PL",
+    "UP",
     "FURB",
     "RUF",
-] # "B", "N" to add later
+    "TRY",
+    "TCH",
+]
 # We may want to enable "ERA" to found commented-out code
 ignore = [
+    "FAST002", # We don't use annotated dependencies
     "E203",
     "E266",
     "E501",
@@ -61,6 +69,7 @@ ignore = [
     "PLR0913", # "Too many arguments in function definition"
     "PLR0915", # "Too many statements"
     "PLR2004", # "Magic value used in comparison"
+    "G004",    # "Logging statement uses f-string"
 ]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
@@ -131,6 +140,7 @@ module = [
     "fitz",
     "google_auth_oauthlib.flow",
     "googleapiclient.*",
+    "sqlalchemy_utils",
 ]
 ignore_missing_imports = true
 
