--- a/.env.template
+++ b/.env.template
@@ -68,7 +68,7 @@ MYECLPAY_MAXIMUM_WALLET_BALANCE: int | None
 #MYECLPAY_DATA_VERIFIER_ACCESS_TOKEN = ""
 
 # S3 configuration for file storage
-#S3_MYECLPAY_LOGS_BUCKET_NAME = "hyperion"
+#S3_BUCKET_NAME = "hyperion"
 #S3_ACCESS_KEY_ID = "realaccesskey"
 #S3_SECRET_ACCESS_KEY = "realsecretkey"
 
