Return a code 400 when creating a store with an existing name

--- a/.env.template
+++ b/.env.template
@@ -53,6 +53,7 @@ USE_FIREBASE=false
 # Payment features using HelloAsso
 # HelloAsso provide a sandbox to be able to realize tests
 # HELLOASSO_API_BASE should have the format: `api.helloasso-sandbox.com`
+# HelloAsso only allow 20 simultaneous active access token. Note that each Hyperion worker will need its own access token.
 #HELLOASSO_API_BASE = ""
 #HELLOASSO_CLIENT_ID = ""
 #HELLOASSO_CLIENT_SECRET = ""
