--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,7 @@
 -r requirements-common.txt
 aiosqlite==0.20.0
 httpx==0.27.0                       # needed for tests as a replacement of requests in TestClient
-mypy==1.16.0
+mypy[faster-cache]==1.16.0
 pandas-stubs == 2.2.2.240807
 psycopg[binary]==3.2.1             # PostgreSQL adapter for synchronous operations at startup (database initializations & migrations), binary installation is the easiest way to install it
 pytest-alembic==0.11.1
