--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -30,4 +30,5 @@ sqlalchemy-utils == 0.41.2
 SQLAlchemy[asyncio]==2.0.32         # [asyncio] allows greenlet to be installed on Apple M1 devices.
 unidecode==1.3.8
 uvicorn[standard]==0.30.6
+weasyprint==65.1                    # HTML to PDF converter
 xlsxwriter==3.2.0
