--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -9,7 +9,6 @@ broadcaster==0.3.1                  # Working with websockets with multiple work
 calypsso==2.1.1
 fastapi[standard]==0.115.6
 firebase-admin==6.5.0               # Firebase is used for push notification
-fpdf2==2.7.8
 google-auth-oauthlib==1.2.1
 helloasso-python==1.0.5
 icalendar==5.0.13
@@ -20,7 +19,7 @@ phonenumbers==8.13.43               # Used for phone number validation
 pydantic-settings==2.3.4
 pydantic==2.7.4
 pyjwt[crypto]==2.8.0                # generate and verify the JWT tokens, imported as `jwt`
-PyMuPDF==1.24.9                     # PDF processing
+PyMuPDF==1.24.9                     # PDF processing, imported as `fitz`
 pypdf==4.3.1
 python-dotenv==1.0.1                # load environment variables from .env file
 python-multipart==0.0.18             # a form data parser, as oauth flow requires form-data parameters
