--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,6 +131,7 @@ line-ending = "auto"
 [tool.mypy]
 python_version = "3.11"
 plugins = ["pydantic.mypy"]
+exclude = ["scripts/"]
 
 warn_unreachable = true
 warn_unused_configs = true
