feat: support multiple HelloAsso configurations

--- a/.env.test
+++ b/.env.test
@@ -29,8 +29,9 @@ CORS_ORIGINS=["https://test-authorized-origin.com"]
 
 TRUSTED_PAYMENT_REDIRECT_URLS = ["http://localhost:3000/payment_callback"]
 
-HELLOASSO_SLUG = ""
-HELLOASSO_MYECLPAY_SLUG = ""
+HELLOASSO_CONFIGURATIONS = []
+
+HELLOASSO_API_BASE = "https://api.helloasso.com/v3"
 
 MYECLPAY_MAXIMUM_WALLET_BALANCE = 5000
 
