Allow to configure AuthClients using a dictionnary
instead of a list of list

--- a/.env.template.yaml
+++ b/.env.template.yaml
@@ -20,7 +20,20 @@ CLIENT_URL: "http://127.0.0.1:8000/"
 # NOTE: A trailing / is required
 #OVERRIDDEN_CLIENT_URL_FOR_OIDC: "http://host.docker.internal:8000/"
 
-AUTH_CLIENTS: []
+# Configure AuthClients, to allow services to authenticate users using OAuth2 or Openid connect
+# The following format should be used in yaml config files:
+# ```yml
+# AUTH_CLIENTS_DICT:
+#   <ClientId>:
+#     secret: <ClientSecret>
+#     redirect_uri:
+#       - <RedirectUri1>
+#       - <RedirectUri2>
+#     auth_client: <AuthClientClassName>
+# ```
+# `AuthClientClassName` should be a class from `app.utils.auth.providers`
+# `secret` may be omitted to use PKCE instead of a client secret
+AUTH_CLIENTS_DICT: []
 
 #####################
 # Hyperion settings #
