--- a/.env.template.yaml
+++ b/.env.template.yaml
@@ -138,15 +138,10 @@ USE_FIREBASE: false
 # HELLOASSO_API_BASE should have the format: `api.helloasso-sandbox.com`
 # HelloAsso only allow 20 simultaneous active access token. Note that each Hyperion worker will need its own access token.
 
+# [["name", "helloasso_client_id", "helloasso_client_secret", "helloasso_slug", "redirection_uri"]]
+#HELLOASSO_CONFIGURATIONS: []
 #HELLOASSO_API_BASE: ""
-#HELLOASSO_CLIENT_ID: ""
-#HELLOASSO_CLIENT_SECRET: ""
-# Main slug of the HelloAsso account
-#HELLOASSO_SLUG: ""
-#HELLOASSO_MYECLPAY_SLUG: ""
 
-#CDR_PAYMENT_REDIRECTION_URL: ""
-#RAID_PAYMENT_REDIRECTION_URL: ""
 # Maximum wallet balance for MyECLPay in cents, we will prevent user from adding more money to their wallet if it will make their balance exceed this value
 #MYECLPAY_MAXIMUM_WALLET_BALANCE: 1000
 
