--- a/.env.test.yaml
+++ b/.env.test.yaml
@@ -101,7 +101,7 @@ USE_FIREBASE: false
 
 TRUSTED_PAYMENT_REDIRECT_URLS: ["http://localhost:3000/payment_callback"]
 
-HELLOASSO_API_BASE = "https://api.helloasso.com/v3"
-HELLOASSO_CONFIGURATIONS = []
+HELLOASSO_API_BASE: "https://api.helloasso.com/v3"
+HELLOASSO_CONFIGURATIONS: []
 
 MYECLPAY_MAXIMUM_WALLET_BALANCE: 5000
