--- a/.env.test.yaml
+++ b/.env.test.yaml
@@ -51,6 +51,7 @@ AUTH_CLIENTS_DICT:
 # Logging configuration #
 
 LOG_DEBUG_MESSAGES: true
+ENABLE_RATE_LIMITER: false
 
 # CORS_ORIGINS should be a list of urls allowed to make requests to the API
 # It should begin with 'http://' or 'https:// and should never end with a '/'
