JSON schema for Settings

--- a/.env.test.yaml
+++ b/.env.test.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://hyperion.myecl.fr/settings-json-schema.json
+
 ###########################################################################
 #   This dotenv file and its values should NEVER be used in PRODUCTION!   #
 ###########################################################################
