--- a/.env.template.yaml
+++ b/.env.template.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://hyperion.myecl.fr/settings-json-schema.json
+
 ###############################################
 # Authorization using OAuth or Openid connect #
 ###############################################
