--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
     restart: unless-stopped
     command: redis-server --requirepass ${REDIS_PASSWORD}
     environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
 
   hyperion-app:
     image: hyperion-app
@@ -35,10 +35,9 @@ services:
         condition: service_started
     ports:
       - 8000:8000
-    env_file:
-      - .env
+    env_file: .env
     volumes:
-      - ./logs:/app/logs:Z
-      - ./data:/app/data:Z
-      - ./config.yaml:/app/config.yaml:Z
-      - ./firebase.json:/app/firebase.json:Z
+      - ./logs:/hyperion/logs:Z
+      - ./data:/hyperion/data:Z
+      - ./config.yaml:/hyperion/config.yaml:Z
+      - ./firebase.json:/hyperion/firebase.json:Z
