--- a/config.template.yaml
+++ b/config.template.yaml
@@ -46,18 +46,8 @@ LOG_DEBUG_MESSAGES: true
 # It should begin with 'http://' or 'https:// and should never end with a '/'
 CORS_ORIGINS: ["http://localhost"]
 
-############################
-# PostgreSQL configuration #
-############################
-
 # If set, the application use a SQLite database instead of PostgreSQL, for testing or development purposes (if possible Postgresql should be used instead)
-#SQLITE_DB: ""
-# Should be set to the name of the postgres container
-POSTGRES_HOST: "hyperion-db"
-POSTGRES_USER: ""
-POSTGRES_PASSWORD: ""
-POSTGRES_DB: ""
-POSTGRES_TZ: "Etc/UTC"
+SQLITE_DB: "app.db"
 # If True, will print all SQL queries in the console
 DATABASE_DEBUG: False
 
@@ -71,21 +61,6 @@ SMTP_SERVER: ""
 SMTP_USERNAME: ""
 SMTP_PASSWORD: ""
 SMTP_EMAIL: ""
-
-########################
-# Redis configuration #
-########################
-# Redis configuration is needed to use the rate limiter, or multiple uvicorn workers
-# We use the default redis configuration, so the protected mode is enabled by default (see https://redis.io/docs/manual/security/#protected-mode)
-# If you want to use a custom configuration, a password and a specific binds should be used to avoid security issues
-
-# May be left at "" during dev if you don't have a redis server running, in production it should be set to the name of the redis container
-REDIS_HOST: "hyperion-redis"
-REDIS_PORT: 6379
-# Should be commented during development to work with docker-compose-dev, and set in production
-#REDIS_PASSWORD: ""
-REDIS_LIMIT: 1000
-REDIS_WINDOW: 60
 
 ##########################
 # Firebase Configuration #
