--- a/tests/config.test.yaml
+++ b/tests/config.test.yaml
@@ -76,6 +76,6 @@ USE_FIREBASE: false
 TRUSTED_PAYMENT_REDIRECT_URLS: ["http://localhost:3000/payment_callback"]
 
 HELLOASSO_API_BASE: "https://api.helloasso.com/v3"
-HELLOASSO_CONFIGURATIONS: []
+HELLOASSO_CONFIGURATIONS: {}
 
 MYECLPAY_MAXIMUM_WALLET_BALANCE: 5000
