--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -7,6 +7,7 @@ bcrypt==4.1.3                       # password hashing
 boto3==1.38.23
 broadcaster==0.3.1                  # Working with websockets with multiple workers.
 calypsso==2.2.1
+Faker==37.1.0
 fastapi[standard]==0.115.6
 firebase-admin==6.5.0               # Firebase is used for push notification
 google-auth-oauthlib==1.2.1
@@ -16,7 +17,7 @@ jellyfish==1.0.4                    # String Matching
 Jinja2==3.1.6                       # template engine for html files
 pandas==2.2.2
 phonenumbers==8.13.43               # Used for phone number validation
-psutil==7.0.0                       # psutil is used to determine the number of Hyperion workers  
+psutil==7.0.0                       # psutil is used to determine the number of Hyperion workers
 pydantic-settings==2.3.4
 pydantic==2.7.4
 pyjwt[crypto]==2.8.0                # generate and verify the JWT tokens, imported as `jwt`
