--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,33 @@
 {
-    "editor.formatOnSave": true,
-    "editor.tabSize": 4,
-    "editor.insertSpaces": true,
-    "editor.detectIndentation": false,
-    "python.analysis.typeCheckingMode": "off",
-    "editor.codeActionsOnSave": {
-        "source.organizeImports": "explicit"
-    },
-    // We don't want VS Code to find our dotenv file, as the IDE is not cappable of parsing it correctly.
-    // When using the debugger, VS Code pass the porly parsed file as environnement variables, letting to Pydantic validation erros
-    "python.envFile": "${workspaceFolder}/",
-    "[python]": {
-        "editor.defaultFormatter": "charliermarsh.ruff"
-    },
-    "python.testing.pytestArgs": [
-        "tests"
-    ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
+  "editor.formatOnSave": true,
+  "editor.tabSize": 4,
+  "editor.insertSpaces": true,
+  "editor.detectIndentation": false,
+  "python.analysis.typeCheckingMode": "off",
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": "explicit"
+  },
+  // We don't want VS Code to find our dotenv file, as the IDE is not cappable of parsing it correctly.
+  // When using the debugger, VS Code pass the porly parsed file as environnement variables, letting to Pydantic validation erros
+  "python.envFile": "${workspaceFolder}/",
+  "[python]": {
+    "editor.defaultFormatter": "charliermarsh.ruff"
+  },
+  "python.testing.pytestArgs": ["tests"],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true,
+  "github.copilot.enable": {
+    "*": true,
+    "plaintext": false,
+    "markdown": false,
+    "scminput": false,
+    // We don't want Copilot to be active
+    // on config.yaml and dotenv files
+    "yaml": false,
+    "dotenv": false
+  },
+  "files.associations": {
+    ".env": "dotenv",
+    ".env.template": "dotenv"
+  }
 }
