Minor config fixes

--- a/.env.template
+++ b/.env.template
@@ -6,9 +6,8 @@
 POSTGRES_HOST="hyperion-db"
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
-POSTGRES_DB=""
+POSTGRES_DB="hyperion"
 POSTGRES_TZ="Etc/UTC"
-
 
 ########################
 # Redis configuration #
