revert file associations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,9 @@
     // on config.yaml and dotenv files
     "yaml": false,
     "dotenv": false
+  },
+  "files.associations": {
+    ".env": "dotenv",
+    ".env.template": "dotenv"
   }
 }
