--- a/.env.template
+++ b/.env.template
@@ -3,11 +3,13 @@
 ############################
 
 # Should be set to the name of the postgres container
-POSTGRES_HOST="hyperion-db"
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
+POSTGRES_HOST=""
 POSTGRES_DB="hyperion"
 POSTGRES_TZ="Etc/UTC"
+# The database can be accessed through the command line with
+# psql -U $POSTGRES_USER -d $POSTGRES_DB
 
 ########################
 # Redis configuration #
