--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,8 @@
 {
-    "recommendations": [
-        "ms-python.python",
-        "ms-python.mypy-type-checker",
-        "charliermarsh.ruff",
-    ]
+  "recommendations": [
+    "ms-python.python",
+    "ms-python.mypy-type-checker",
+    "charliermarsh.ruff",
+    "tamasfe.even-better-toml"
+  ]
 }
