--- a/.env.template
+++ b/.env.template
@@ -18,7 +18,7 @@ POSTGRES_TZ="Etc/UTC"
 # We use the default redis configuration, so the protected mode is enabled by default (see https://redis.io/docs/manual/security/#protected-mode)
 # If you want to use a custom configuration, a password and a specific binds should be used to avoid security issues
 
-# May be left at "" during dev if you don't have a redis server running, in production it should be set to the name of the redis container
+# REDIS_HOST may be left at "" to disable Redis during development if you don't have a redis server running, in production it should be set to the name of the redis container
 REDIS_HOST="hyperion-redis"
 REDIS_PORT=6379
 # Should be commented during development to work with docker-compose-dev, and set in production
