--- a/tests/.env.test
+++ b/tests/.env.test
@@ -2,6 +2,8 @@
 #   This dotenv file and its values should NEVER be used in PRODUCTION!   #
 ###########################################################################
 
+SQLITE_DB="test.db"
+
 # Will be used if tests are run with postgresql (should be the case because postgres is used in production)
 POSTGRES_HOST="localhost"
 POSTGRES_USER="hyperion"
@@ -10,7 +12,7 @@ POSTGRES_DB="hyperion"
 POSTGRES_TZ="Etc/UTC"
 
 # Redis configuration #
-REDIS_HOST="localhost"
+REDIS_HOST=""
 REDIS_PORT=6379
 #REDIS_PASSWORD=""
 REDIS_LIMIT=5
