--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,2 +1,2 @@
 -r requirements-common.txt
-psycopg[c]==3.1.19                  # PostgreSQL adapter for synchronous operations at startup (database initializations & migrations), local installation is recommended for a production site
+psycopg[binary]==3.1.19                  # PostgreSQL adapter for synchronous operations at startup (database initializations & migrations), local installation is recommended for a production site
