Better workflows for deploying to docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,9 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
 
   hyperion-app:
-    image: hyperion-app
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: hyperion-app
     restart: unless-stopped
     depends_on:
