Feat: fastapi's arg "app/main.py" is useless

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "debugpy",
       "request": "launch",
       "module": "fastapi_cli",
-      "args": ["dev", "app/main.py"],
+      "args": ["dev"],
       "jinja": true,
       "justMyCode": true
     }
