--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -1,7 +1,7 @@
 aiofiles==24.1.0                    # Asynchronous file manipulation
 alembic==1.13.2                     # database migrations
 arq==0.26.3                         # Scheduler 
-asyncpg==0.29.0                     # PostgreSQL adapter for asynchronous operations
+asyncpg==0.29.0                     # PostgreSQL adapter for *asynchronous* operations
 authlib==1.6.4
 bcrypt==4.1.3                       # password hashing
 boto3==1.38.23
@@ -18,6 +18,7 @@ jellyfish==1.0.4                    # String Matching
 Jinja2==3.1.6                       # template engine for html files
 phonenumbers==8.13.43               # Used for phone number validation
 psutil==7.0.0                       # psutil is used to determine the number of Hyperion workers
+psycopg[binary]==3.2.10             # PostgreSQL adapter for *synchronous* operations at startup (database initializations & migrations)
 pydantic-settings==2.3.4
 pydantic==2.7.4
 pyjwt[crypto]==2.8.0                # generate and verify the JWT tokens, imported as `jwt`
